--- a/.github/workflows/cputemp-build-ada.yml
+++ b/.github/workflows/cputemp-build-ada.yml
@@ -3,12 +3,12 @@
 name: cputemp
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# events but only for the main branch
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 #  pull_request:
-#    branches: [ master ]
+#    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -61,7 +61,7 @@ jobs:
 
     # Saves built file as a release.
     - name: Upload artifact
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@main
       with:
         name: release
         path: bin
