--- a/.github/workflows/cputemp-build-ada.yml
+++ b/.github/workflows/cputemp-build-ada.yml
@@ -14,9 +14,10 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+    # The type of runner that the job will run on (latest still @ 18.04 on 04 Oc2 2020)
+    #runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:      
     # Install Ubuntu OS updates
